fix on iehacks.css
git-svn-id: file:///home/jaliste/hcvol/hcvol/trunk@1134 4f49b16c-3c57-40ef-8e22-7452baa6c33a

--- a/styles/stylesheet1/iehacks.css
+++ b/styles/stylesheet1/iehacks.css
@@ -61,8 +61,8 @@
 	** IE6       - x
 	** IE7       - 0
 	*/	
-
-	* html .floatbox { width:100%; }
+	/* --------------- NORMALY THIS IS SET TO 100% BUT DIDN'T WORK OUT WIT IE, SO SET IT TO 90% ----------------- */
+	* html .floatbox { width:90%; }
 	/*------------------------------------------------------------------------------------------------------*/
 
 	/*------------------------------------------------------------------------------------------------------*/
